--- a/eindex/src/main/resources/application.properties
+++ b/eindex/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/players?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/e_index?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Galakris95$
 spring.jpa.hibernate.ddl-auto=create
