--- a/eindex/src/main/resources/application.properties
+++ b/eindex/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/e_index?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=Galakris95$
 spring.jpa.hibernate.ddl-auto=create
+#hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
